[package]
name = "mindforge"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/kinghuynh/mindforge.git"
authors = ["Kingston Huynh <139024820+kinghuynh@users.noreply.github.com>"]
description = "A Rust crate for building multi-agentic applications."
keywords = ["llm", "AI", "prompts", "langchain", "agents"]
categories = [
    "development-tools",
    "template-engine",
    "text-processing",
]

[dependencies]
messageforge = "0.1.0"
promptforge = "0.1.0"
